[package]
name = "dq"
version = "0.1.0"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]

description = "A complete implementation of dual quaternions."

keywords = [ "quaternion", "dual", "math", "lie-theory", "skinning" ]
license = "BSD-3-Clause"
repository = "https://github.com/rustsim/nalgebra"
categories = [ "science" ]

[dependencies]
#num-traits = "*"
num-traits     = { version = "0.2", default-features = false }
#nalgebra = { git = "https://github.com/adamnemecek/nalgebra", branch="div2" }
nalgebra = "0.17.3"
#approx = "*"
approx         = { version = "0.3", default-features = false }

#[patch.crates-io]
#alga = { git = "https://github.com/rustsim/alga", branch = "dev" }