[package]
name = "dq"
version = "0.1.0"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]

description = "A complete implementation of dual quaternions."

keywords = [ "quaternion", "dual", "math", "lie-theory", "skinning" ]
license = "BSD-3-Clause"
repository = "https://github.com/adamnemecek/dq"
categories = [ "science" ]

[dependencies]
num-traits = "*"
nalgebra = { git = "https://github.com/adamnemecek/nalgebra", branch="div2" }
approx = "*"

[patch.crates-io]
alga = { git = "https://github.com/rustsim/alga", branch = "dev" }